# backend

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
db-init/: 01-init.sql
src/: app.rs  main.rs
src/db/: mod.rs
src/handlers/: users.rs
src/models/: users.rs
src/routes/: users.rs
src/services/: user_service.rs
